--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,8 +37,8 @@ def reactNativeArchitectures() {
 }
 
 android {
-  ndkVersion getExtOrDefault("ndkVersion")
-  def ndkVersionMajor = ndkVersion.split("\\.")[0].toInteger()
+    ndkVersion '25.1.8937393'
+    def ndkVersionMajor = ndkVersion.split("\\.")[0].toInteger()
   if (ndkVersionMajor < 24) {
     ndkVersion = project.properties["RNLlama_ndkversion"]
   }
