--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -155,8 +155,9 @@ dependencies {
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
+  implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
 
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
+  debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
