--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -42,3 +42,6 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+# START to integrate Unity
+unityStreamingAssets=
+# END to integrate Unity
