Update model, shell act(will not use)

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -98,8 +98,8 @@ android {
         applicationId "com.rnllamaexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "1.06"
+        versionCode 9
+        versionName "1.09"
     }
 
     splits {
@@ -156,8 +156,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
   implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-  debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
+    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
