--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -149,6 +149,9 @@ android {
 }
 
 dependencies {
+  implementation 'net.java.dev.jna:jna:5.13.0@aar'
+  implementation 'com.alphacephei:vosk-android:0.3.47@aar'
+
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
@@ -173,3 +176,15 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
 apply plugin: 'org.jetbrains.kotlin.android'; applyNativeModulesAppBuildGradle(project)
+
+tasks.register('genUUID') {
+  def uuid = UUID.randomUUID().toString()
+  def odir = file("$buildDir/generated/assets/model-en-us")
+  def ofile = file("$odir/uuid")
+  doLast {
+    mkdir odir
+    ofile.text = uuid
+  }
+}
+
+preBuild.dependsOn(genUUID)
